--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,12 +4,9 @@
 
     <uses-permission android:name="android.permission.FOREGROUND_SERVICE" />
     <uses-permission android:name="android.permission.POST_NOTIFICATIONS" />
-
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
-    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
-    <!-- 如果應用程式中的特定功能會持續與其他使用者分享位置，需要背景位置資訊存取權 -->
+    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" /> <!-- 如果應用程式中的特定功能會持續與其他使用者分享位置，需要背景位置資訊存取權 -->
     <uses-permission android:name="android.permission.ACCESS_BACKGROUND_LOCATION" />
-
 
     <application
         android:allowBackup="true"
@@ -20,7 +17,11 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.LocationUpdate"
         tools:targetApi="31">
-        <service android:name=".LocationService"/>
+        <service
+            android:name=".LocationCatch"
+            android:enabled="true"
+            android:exported="true" />
+        <service android:name=".LocationService" />
 
         <activity
             android:name=".MainActivity"
