--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,10 +13,14 @@
         android:dataExtractionRules="@xml/data_extraction_rules"
         android:fullBackupContent="@xml/backup_rules"
         android:icon="@mipmap/ic_launcher"
-        android:label="@string/app_name"
+        android:label="銀髮族動起來"
         android:supportsRtl="true"
         android:theme="@style/Theme.LocationUpdate"
         tools:targetApi="31">
+        <activity
+            android:name=".Show_Save_Location"
+            android:exported="false" />
+
         <service
             android:name=".LocationCatch"
             android:enabled="true"
