--- a/app/build.gradle
+++ b/app/build.gradle
@@ -59,5 +59,6 @@ dependencies {
     // Add the dependency for the Firebase Authentication library
     // When using the BoM, you don't specify versions in Firebase library dependencies
     implementation 'com.google.firebase:firebase-auth:21.0.1'
+    implementation 'com.google.firebase:firebase-analytics:20.0.0'
 
 }
